<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed_list">

    <fragment
        android:id="@+id/navigation_view"
        android:name="com.issen.simpleandroid.ui.view.ViewFragment"
        android:label="@string/title_view"
        tools:layout="@layout/fragment_view" />

    <fragment
        android:id="@+id/navigation_feed_list"
        android:name="com.issen.simpleandroid.ui.feedList.FeedListFragment"
        android:label="@string/title_feed_list"
        tools:layout="@layout/fragment_feed_list" />

    <fragment
        android:id="@+id/navigation_post_list"
        android:name="com.issen.simpleandroid.ui.postList.PostListFragment"
        android:label="@string/title_post_list"
        tools:layout="@layout/fragment_post_list" />
</navigation>